[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
rust-crypto = "0.2.36"
bincode = "1.3.3"
failure = "0.1.8"
sled = "0.34.7"
log = "0.4.0"
env_logger = "0.10.0"
clap = "4.3.0"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version="1.0.100",features=["derive"]}
serde_json = "1.0.90"
